--- a/TodoList/Views/Shared/_BrowseMedia.cshtml
+++ b/TodoList/Views/Shared/_BrowseMedia.cshtml
@@ -5,15 +5,56 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Cancel"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Dosya Yükle</h4>
             </div>
-            <div class="modal-body" id="@("modalBody" + ViewBag.Element)">
-            </div>
+                <div id="myTabs">
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#upload@(ViewBag.Element)" aria-controls="upload@(ViewBag.Element)" role="tab" data-toggle="tab">Yükle</a></li>
+                        <li role="presentation"><a href="#browse@(ViewBag.Element)" aria-controls="browse@(ViewBag.Element)" role="tab" data-toggle="tab">Gözat</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane fade in active" id="upload@(ViewBag.Element)">
+                            <div class="modal-body" id="@("modalBody" + ViewBag.Element)">
+                            </div>
+                            
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="browse@(ViewBag.Element)">
+                            <div class="portlet light bordered">
+                                <div class="portlet-title">
+                                    <div class="caption font-dark">
+                                        <i class="icon-settings font-dark"></i>
+                                        <span class="caption-subject bold uppercase ">Dosya Seç</span>
+                                    </div>
+                                </div>
+                                <div class="row form-inline">
+                                    <input type="text" id="word" placeholder="ara" class="form-control col-md-4" />
+                                    <select name="year" id="year" class="form-control col-md-2"></select>
+                                    <select name="month" id="month" class="form-control col-md-2"></select>
+                                    <select name="category" id="category" class="form-control col-md-2"><option selected>Image</option><option>Video</option><option>Document</option></select>
+                                    <input type="button" id="search@(ViewBag.Element)" value="Ara" class="form-control btn-info col-md-2">
+                                </div>
+                                <br />
+
+                                <div class="row" id="modal-gallery" style="max-height:300px; overflow-y:scroll;">
+                                </div>
+                                <input type="hidden" value="" id="temp" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            
             <div class="modal-footer">
                 <button type="button" class="btn btn-info" data-dismiss="modal" style="display:none;" id="browseSave">Kaydet</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
             </div>
+
         </div>
+
     </div>
+   
+
 </div>
+
 <script>
     function browseMedia(element) {
 
@@ -47,5 +88,78 @@
             }
         });
     }
+
+</script>
+
+<script>
+    function monthandyearWrite@(ViewBag.Element)() {
+        var modal = $('#modal' + '@(ViewBag.Element)');
+
+                var now = new Date();
+                for (var i = 1; i <= 12; i++) {
+                    if (i == now.getMonth() + 1) {
+                        modal.find('#month').append("<option id='" + i + "' selected>" + i + "</option>")
+                    } else {
+                        modal.find('#month').append("<option id='" + i + "'>" + i + "</option>")
+                    }
+                }
+                for (var i = now.getFullYear(); i >= 2017; i--) {
+                    if (i == now.getYear()) {
+                        modal.find('#year').append("<option id='" + i + "' selected>" + i + "</option>")
+                    }
+                    else {
+                        modal.find('#year').append("<option id='" + i + "'>" + i + "</option>")
+                    }
+                }
+            }
+    $("#search@(ViewBag.Element)").click(function modalgallery() {
+        var modal = $('#modal'+'@(ViewBag.Element)');
+        var word = modal.find('#word').val();
+        var year = modal.find('#year').val();
+        var month = modal.find('#month').val();
+        var category = modal.find('#category').val();
+        modal.find('#modal-gallery').html('');
+        $.ajax({
+            url: "/Media/ModalGallery",
+            cache: false,
+            type: "POST",
+            data: { word:word, year:year, month:month, category:category},
+            success: function (data) {
+                $.each(data.result, function (k, v) {
+                    var modal = $('#modal'+'@(ViewBag.Element)');
+                    if (v.fileType == "Image")
+                    {
+                        modal.find('#modal-gallery').append("<div class='col-sm-2' style='text-align:center'><img class='img-thumbnail' onclick=\"imgSelect@(ViewBag.Element)(this,'" + v.FilePath  + "');\" style='width:110px; height:80px; margin-top:10px;' src='" + v.FilePath + "'/><figcaption style='font-size:10px;'>" + v.Name.substring(0, 10) + "</figcaption></div>");
+
+                    }
+                    else if (v.fileType == "Document")
+                    {
+                        modal.find('#modal-gallery').append("<div class='col-sm-2' style='text-align:center'><i onclick=\"imgSelect@(ViewBag.Element)(this,'" + v.FilePath + "');\" style='line-height:90px;width:100px; height:100px; margin-top:10px;'  class='img-thumbnail inline-block big fa fa-file-pdf-o fa-4x ' aria-hidden='true'></i><figcaption style='font-size:10px;'>"+ v.Name.substring(0, 10) + "</figcaption></div>");
+                    }
+                    else
+                    {
+                        modal.find('#modal-gallery').append("<div class='col-sm-2' style='text-align:center'><video class='img-thumbnail' onclick='imgSelect@(ViewBag.Element)(this,$(this).find(\"source\").attr(\"src\"));' style='width:110px; height:80px; margin-top:10px;' autoplay><source src='" + v.FilePath + "' type='video/mp4' /></video><figcaption style='font-size:10px;'>" + v.Name.substring(0, 10) + "</figcaption></div>");
+                    }
+                });
+            },
+            error: function () {
+                alert("Bilinmeyen hata oluştu!");
+            }
+        });
+    });
+    $(function () { monthandyearWrite@(ViewBag.Element)(); });
+
+</script>
+<script>
+
+    function imgSelect@(ViewBag.Element)(el, par) {
+        $('#modal@(ViewBag.Element) #temp').val(par);
+        $("#modal@(ViewBag.Element) #browseSave").css("display", "inline");
+        $(".mediaSelected").removeClass("mediaSelected");
+        $(el).addClass("mediaSelected");
+    }
+    $("#modal@(ViewBag.Element) #browseSave").click(function () {
+        $('#' + '@(ViewBag.Element)').val($('#modal@(ViewBag.Element) #temp').val());
+    });
 
 </script>
